Refactored to a clean architecture.